--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 --------------------------------------------------------------*/
 div.gallery {
   margin: 5px;
-  border: 1px solid #ccc;
+  border: 1px solid #FF5F15;
   float: left;
   width: 180px;
 }
