--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,10 +13,11 @@ div.gallery {
   border: 1px solid #FF5F15;
   float: left;
   width: 180px;
+  text-align: center;
 }
 
 div.gallery:hover {
-  border: 1px solid #777;
+  border: 1px solid #FF5F15;
 }
 
 div.gallery img {
