--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,12 +17,13 @@ div.gallery {
 }
 
 div.gallery:hover {
-  border: 1px solid #FF5F15;
+  border: 3px solid #FF5F15;
 }
 
 div.gallery img {
   width: 100%;
   height: auto;
+  justify-content: center;
 }
 
 div.desc {
