--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 # General
 --------------------------------------------------------------*/
 
-center{
+.center{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around; 
